--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-/* Navbar.css */
 .navbar {
   position: fixed;
   top: 85px; /* Adjust to be directly under the header */
@@ -17,17 +16,38 @@
   margin: 0;
 }
 
+.navbar h2 {
+  margin: 0;
+  padding: 10px 0;
+  font-size: 1.1rem; /* Default font size */
+  color: #fff;
+}
+
+.navbar ul ul {
+  padding-left: 10px; /* Adjust spacing between nested ul and li elements */
+}
+
 .navbar ul li {
-  margin-bottom: 10px;
+  margin-bottom: 10px; /* Adjust spacing between li elements */
 }
 
 .navbar ul li a {
+  color: #fff;
+}
+
+.navbar h2 a {
   display: block;
   text-decoration: none;
   color: #fff;
   font-weight: bold;
+  padding: 8px;
 }
 
-.navbar ul li a:hover {
-  text-decoration: underline;
+.navbar h2.active {
+  font-size: 1.2rem; /* Larger font size for active section */
+}
+
+.navbar a:hover {
+  background-color: rgba(255, 255, 255, 0.1); /* Light background on hover */
+  border-radius: 4px; /* Rounded corners on hover */
 }
