--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -6,7 +6,7 @@
   padding: 20px;
   width: calc(100% - 220px);
   height: calc(100vh - 60px - 20px);
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 .table-container table {
