--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,13 +1,17 @@
 /* Map.css */
 .map-container {
-  width: 100%;
-  height: 100%;
+  margin-top: 60px;
+  margin-left: 100px;
+  padding: 20px;
+  width: calc(100% - 220px);
+  height: calc(100vh - 60px - 20px);
+  overflow-y: hidden;
 }
 
 .leaflet-container {
   /* width: 80; */
   width: calc(100vh - - 20px);
   height: calc(100vh - 220px - 120px);
-  padding-top: 60px;
-  margin: 80px;
+  /* padding-top: 60px; */
+  /* margin: 80px; */
 }
